--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 JWT_CHAVE_PRIVADA=key
-MONGODB_URL=localhost:27017
+MONGODB_CONNECTION=cluster0.tnv25.mongodb.net
 MONGODB_DATABASE=database
+MONGODB_USERNAME=admin
+MONGODB_PASSWORD=123
