--- a/front-end/app/pubspec.yaml
+++ b/front-end/app/pubspec.yaml
@@ -28,8 +28,26 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  http: '^0.12.2'
+  provider: '^4.3.2'
+  shared_preferences: '^0.5.12'
+  get_it: '^5.0.1'
+  shimmer: ^1.1.1
+  retrofit: ^1.3.4
+  logger: ^0.9.3
+  source_gen: ^0.9.7
+  json_annotation: ^3.1.0
+  dio: ^3.0.10
+  intl: ^0.16.1
+  injectable: any
+  pretty_dio_logger: 1.1.1
 
 dev_dependencies:
+  build_resolvers: any
+  injectable_generator: any
+  retrofit_generator: ^1.3.8
+  build_runner: ^1.9.0
+  json_serializable: ^3.5.0
   flutter_test:
     sdk: flutter
 
@@ -48,6 +66,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
